updating songs, creating albums, updating bonuses

--- a/src/main/resources/pagecontent_en_US.properties
+++ b/src/main/resources/pagecontent_en_US.properties
@@ -1,21 +1,37 @@
 label.title.admin=Admin panel
 label.title.edit=Edit profile
+label.title.editbonus=Edit bonus
+label.title.addmoney=Add money
 label.title.error=Error page
 label.title.login=Login
 label.title.main=Main
 label.title.profile=Profile
 label.title.registration=Registration
+label.title.photo=Photo
+label.title.editsongs=Edit songs
+label.title.editalbums=Edit albums
+label.title.update=Update
 
 label.button.login=Log in
 label.button.registration=Registration
 label.button.addsong=Add song
+label.button.addalbum=Add album
+label.button.allusers=Users
 
 label.placeholder.email=Email
 label.placeholder.password=Password
-label.placeholder.songtitle=Title
+label.placeholder.title=Title
 label.placeholder.author=Authors
 label.placeholder.cost=Cost
 label.placeholder.song=Song
+label.placeholder.name=Name
+label.placeholder.role=Role
+label.placeholder.money=Money
+label.placeholder.bonus=Bonus
+label.placeholder.editbonus=Edit bonus
+label.placeholder.buysong=Buy song
+label.placeholder.buyalbum=Buy album
+label.placeholder.newbonus=Bonus
 
 label.navbar.home=Home
 label.navbar.profile=Profile
@@ -25,4 +41,4 @@ label.navbar.admin=Admin panel
 label.navtab.songs=Songs
 label.navtab.albums=Albums
 label.navtab.addsong=Add song
-label.navtab.addAlbum=Add album
+label.navtab.addalbum=Add album
