--- a/src/main/resources/pagecontent_en_US.properties
+++ b/src/main/resources/pagecontent_en_US.properties
@@ -42,3 +42,7 @@ label.navtab.songs=Songs
 label.navtab.albums=Albums
 label.navtab.addsong=Add song
 label.navtab.addalbum=Add album
+
+label.registration.email=Email*
+label.registration.name=Name*
+label.registration.password=Password*
