--- a/src/main/resources/pagecontent_en_US.properties
+++ b/src/main/resources/pagecontent_en_US.properties
@@ -1,15 +1,18 @@
 label.title.admin=Admin panel
-label.title.edit=Edit profile
-label.title.editbonus=Edit bonus
-label.title.addmoney=Add money
+label.title.edit.profile=Edit profile
+label.title.edit.bonus=Edit bonus
+label.title.edit.songs=Edit songs
+label.title.edit.albums=Edit albums
+label.title.add.money=Add money
 label.title.error=Error page
 label.title.login=Login
 label.title.main=Main
 label.title.profile=Profile
 label.title.registration=Registration
+label.title.buy.song=Buy song
+
 label.title.photo=Photo
-label.title.editsongs=Edit songs
-label.title.editalbums=Edit albums
+
 label.title.update=Update
 
 label.button.login=Log in
