--- a/src/main/resources/pagecontent_en_US.properties
+++ b/src/main/resources/pagecontent_en_US.properties
@@ -9,6 +9,7 @@ title.edit.song=Edit song
 title.info.song=Info song
 title.admin=Admin panel
 title.song.payment=Song payment
+title.edit.album=Edit album
 
 navbar.main=Home
 navbar.profile=Profile
