much fixes, delete

--- a/src/main/resources/pagecontent_en_US.properties
+++ b/src/main/resources/pagecontent_en_US.properties
@@ -10,12 +10,11 @@ title.info.song=Info song
 title.admin=Admin panel
 title.song.payment=Song payment
 title.edit.album=Edit album
-
+title.error=Error page
 navbar.main=Home
 navbar.profile=Profile
 navbar.logout=Logout
 navbar.admin=Admin
-
 tab.songs=Songs
 tab.albums=Albums
 tab.add.song=Add song
@@ -25,7 +24,7 @@ tab.edit.album=Edit album
 tab.all.users=All users
 tab.profile=Profile
 tab.your.songs=Your songs
-
+tab.your.albums=Your albums
 thread.title=Title
 thread.authors=Authors
 thread.song=Song
@@ -39,7 +38,8 @@ thread.edit.bonus=Edit bonus
 thread.edit.song=Edit song
 thread.photo=Photo
 thread.edit.album=Edit album
-
+thread.delete.song=Delete Song
+thread.checkbox=Checkbox
 placeholder.email=Email
 placeholder.password=Password
 placeholder.name=Name
@@ -48,14 +48,12 @@ placeholder.authors=Authors
 placeholder.title=Title
 placeholder.cost=Cost
 placeholder.new.bonus=New bonus
-
 header.login=Log in
 header.add.money=Add money
 header.edit.bonus=Edit bonus
 header.edit.profile=Edit profile
 header.edit.song=Edit song
 header.registration=Registration
-
 button.login=Login
 button.registration=Registration
 button.ok=OK
@@ -68,8 +66,25 @@ button.edit.bonus=Edit bonus
 button.edit.song=Edit song
 button.edit.album=Edit album
 button.buy.song=Buy song
-
+button.delete=Delete
 label.email=Email
 label.role=Role
 label.money=Money
 label.bonus=Bonus
+label.error.cost=Cost should be decimal
+label.error.bonus=Bonus should be decimal
+label.error.login=Wrong email or password
+label.error.email=There is user with such email
+label.error.no.user=There is no such user
+label.error.no.bonus=You don't have enough bonus to pay for this audio
+label.error.no.money=You don't have enough money to pay for this audio
+label.error.name=There is user with this name
+label.error.regex.password=Incorrect password, password should be 6-10 characters length at least one letter and one number
+label.error.regex.name=Incorrect name, name should be at least 6 characters length, all the characters should be letters. Name is unique.
+label.error.money=Money should be positive decimal
+label.error.money.limit=Money limit was reached
+label.repeat.buy.song=You have already bought this song
+label.repeat.buy.album=You have already bought this album
+text.exception.path=Exception from:
+text.exception.type=Exception:
+text.exception.message=Exception message:
