--- a/src/main/resources/pagecontent_ru_RU.properties
+++ b/src/main/resources/pagecontent_ru_RU.properties
@@ -9,52 +9,51 @@ title.edit.song=Изменить песню
 title.info.song=Информация о песне
 title.admin=Панель администратора
 title.song.payment=Оплата песни
-
+title.edit.album=Редактировать альбом
+title.error=Ошибка
 navbar.main=Главная
 navbar.profile=Профиль
 navbar.logout=Выход
-navbar.admin=Панель администратора
-
+navbar.admin=Admin
 tab.songs=Песни
 tab.albums=Альбомы
 tab.add.song=Добавить песню
 tab.add.album=Добавить альбом
 tab.edit.song=Изменить песню
 tab.edit.album=Изменить альбом
-tab.all.users=Все пользователи
+tab.all.users=Вссе пользователи
 tab.profile=Профиль
 tab.your.songs=Ваши песни
-
+tab.your.albums=Ваши альбомы
 thread.title=Название
 thread.authors=Авторы
 thread.song=Песня
 thread.info=Информация
-thread.email=Эл.почта
+thread.email=Email
 thread.name=Имя
 thread.role=Роль
-thread.money=Счет
+thread.money=Деньги
 thread.bonus=Бонус
 thread.edit.bonus=Изменить бонус
 thread.edit.song=Изменить песню
 thread.photo=Фото
 thread.edit.album=Изменить альбом
-
-placeholder.email=Эл.почта
+thread.delete.song=Удалить песню
+thread.checkbox=Checkbox
+placeholder.email=Email
 placeholder.password=Пароль
 placeholder.name=Имя
 placeholder.money=Деньги
 placeholder.authors=Авторы
 placeholder.title=Название
-placeholder.cost=Стоимость
+placeholder.cost=Цена
 placeholder.new.bonus=Новый бонус
-
 header.login=Вход
 header.add.money=Добавить деньги
 header.edit.bonus=Изменить бонус
 header.edit.profile=Изменить профиль
 header.edit.song=Изменить песню
 header.registration=Регистрация
-
 button.login=Вход
 button.registration=Регистрация
 button.ok=OK
@@ -66,9 +65,26 @@ button.add.album=Добавить альбом
 button.edit.bonus=Изменить бонус
 button.edit.song=Изменить песню
 button.edit.album=Изменить альбом
-button.buy.song=КУпить песню
-
-label.email=Эл.почта
+button.buy.song=Купить песню
+button.delete=Удалить
+label.email=Email
 label.role=Роль
 label.money=Деньги
 label.bonus=Бонус
+label.error.cost=Цена долна быть числом
+label.error.bonus=Бонус должен быть числом
+label.error.login=Неверный email или пароль
+label.error.email=Есть пользователь с таким email
+label.error.no.user=Нету такого пользователя
+label.error.no.bonus=У вас недостаточно бонусов
+label.error.no.money=У вас недостаточно денег
+label.error.name=Есть пользователь с таким именем
+label.error.regex.password=Неверный пароль, пароль должен быть 6-10 символов длиной хотя бы одна буква и одна цифра
+label.error.regex.name=Неверное имя, имя должно быть 6 символов длиной, все символы должны быть буквами. Имя уникально.
+label.error.money=Деньги должны быть положительным числом
+label.error.money.limit=Нельзя положть больше денег
+label.repeat.buy.song=Вы уже купили эту песню
+label.repeat.buy.album=Вы уже купили этот альбом
+text.exception.path=Исключение по пути:
+text.exception.type=Исключение:
+text.exception.message=Сообщение:
